# stellareurope

./: .env  Cargo.toml  DATABASE_SETUP.md  FRONTEND_REFACTORING_ANALYSIS.md  KPI_IMPLEMENTATION_SUMMARY.md  README.md  REFACTORED_SIGNUP_EXAMPLE.rs  REFACTORING_IMPLEMENTATION_SUMMARY.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/migrations/: 001_create_users_table.sql  002_create_events_table.sql  003_add_kpi_planning_fields.sql
backend/src/: lib.rs  main.rs
backend/src/database/: connection.rs  mod.rs
backend/src/database/models/: event.rs  mod.rs  user.rs
backend/src/database/repositories/: event_repository.rs  mod.rs  user_repository.rs
backend/src/handlers/: auth.rs  events.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  frontend-e1bb277f627cfb40.js  frontend-e1bb277f627cfb40_bg.wasm  index.html
frontend/src/: lib.rs
frontend/src/components/: mod.rs  navbar.rs
frontend/src/components/forms/: form_section.rs  mod.rs  wallet_input.rs
frontend/src/components/ui/: button.rs  card.rs  input.rs  mod.rs  select.rs  (+1 more)
frontend/src/hooks/: mod.rs  use_form.rs  use_freighter.rs
frontend/src/pages/: aboutpage.css  aboutpage.rs  eventform.css  eventform.rs  eventoutput.css  eventoutput.rs  homepage.css  homepage.rs  mod.rs  signuppage.css  signuppage.rs
frontend/src/routing/: routes.rs
frontend/src/services/: api.rs
frontend/src/styles/: components.css
frontend/src/utils/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/dto/: auth.rs  event.rs  mod.rs  user.rs
