[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
dotenvy = "0.15"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared" }

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"